Fixed spacing on page title

--- a/css/ext_iastate.css
+++ b/css/ext_iastate.css
@@ -203,7 +203,7 @@ a.isu-dropdown-submenu {
 	line-height: 1.32857;
 	font-weight: 400;
 	letter-spacing: 0;
-	margin: 1rem 0 1rem;
+	margin: 3.5625rem 0 0.625rem;
 }
 
 /* Change Authored on information display */
